# web-scraping-project

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  books.json  coverage.xml  docker-compose.examples.yml  docker-compose.override.yml  docker-compose.yml  healthcheck.py  launch.json  main.py  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci-core.yml  ci.yml  dependency-update.yml
docs/: CHANGELOG.md  DOCKER.md  QUICKSTART.md  README.md  api-reference.md  development.md  index.md  installation.md  troubleshooting.md  usage.md
docs/assets/: .gitkeep
docs/includes/: abbreviations.md
docs/javascripts/: mermaid-config.js
docs/stylesheets/: extra.css
output/: books.json
scripts/: __init__.py  docker-build.bat  docker-build.sh  docker-ci.sh  docker-performance.sh  docker-run.bat  docker-run.sh  docker-test.bat  docker-test.sh  docs_deploy_prep.py  monitor.py  test-health.bat  test-health.sh
site/: 404.html  index.html  objects.inv
site/api-reference/: index.html
site/assets/javascripts/: bundle.92b07e13.min.js
site/development/: index.html
site/includes/abbreviations/: index.html
site/installation/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
site/usage/: index.html
tests/: README.md  conftest.py  test_healthcheck.py  test_main.py
tests/fixtures/: __init__.py  mock_responses.py  test_data.py
tests/test_docs/: __init__.py  test_docs_automation.py  test_docs_build.py  test_link_checker.py
tests/test_main/: test_cli.py  test_get_page_url.py  test_get_total_pages.py  test_integration.py  test_main.py  test_main_function.py  test_network_errors.py  test_process_book_details.py
utils/: __init__.py  logger.py  signal_handler.py
