[project]
name = "web-scraping-project"
version = "1.0.0"
description = "Modern web scraping project demonstrating book data extraction from Books to Scrape using Scrapling library with Docker support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Web Scraping Project Contributors"}
]
keywords = ["web-scraping", "scrapling", "docker", "books", "data-extraction"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "loguru>=0.7.3",
    "scrapling>=0.2.99",
    "tqdm>=4.67.1",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "pymdown-extensions>=10.11.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
    "taskipy>=1.14.1",
    "types-requests>=2.31.0",
    "types-tqdm>=4.66.0",
]

[tool.taskipy.tasks]
# Testing and Quality
test = "uv run pytest --cov=. --cov-report html"
lint = "uv run ruff check ."
format = "uv run ruff format ."
mypy = "uv run mypy . --ignore-missing-imports --disable-error-code=import-untyped --disable-error-code=attr-defined"

# Documentation
docs = "uv run mkdocs serve"
docs-build = "uv run mkdocs build"
docs-test = "uv run pytest tests/test_docs/ -v"
docs-check-links = "uv run pytest tests/test_docs/test_link_checker.py -v"
docs-deploy-prep = "uv run python scripts/docs_deploy_prep.py"

# Docker tasks
docker-build = "docker-compose build"
docker-run = "docker-compose run --rm scraper"
docker-test = "docker-compose run --rm scraper --threads 2 --pages 1"
docker-performance = "docker-compose --profile performance up scraper-performance"
docker-light = "docker-compose --profile light up scraper-light"
docker-clean = "docker-compose down && docker system prune -f"

# Application tasks
run = "uv run main.py"
run-performance = "uv run main.py --threads 20 --pages 10"
run-test = "uv run main.py --threads 2 --pages 1"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
# Allow missing imports to not block CI as specified in requirements
ignore_missing_imports = true
# Show error codes for easier debugging
show_error_codes = true
# Be more lenient with external library types - align with pre-commit and CI
disable_error_code = ["import-untyped", "attr-defined"]
# Be more lenient with test files
exclude = [
    "tests/.*",
]

# Main application files should have basic type checking
[[tool.mypy.overrides]]
module = "main"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_no_return = true
warn_unreachable = true

# Utils module should also have basic type checking
[[tool.mypy.overrides]]
module = "utils.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_no_return = true
warn_unreachable = true
